--- a/index.html
+++ b/index.html
@@ -107,12 +107,10 @@
         </div>
       </article>
     </section>
-    <section class="cover">
-      <a class="cover__overlay" target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+    <a class="cover" target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>  
-      </a>
-    </section>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+    </a>
   </main>
   <footer class="footer">
     <nav class="footer__links">
